fixed the problem with my year

--- a/lender_books/templates/books/book_detail.html
+++ b/lender_books/templates/books/book_detail.html
@@ -7,7 +7,7 @@
 <h3>{{ book.year}}</h3>
 <h3>{{ book.author }}</h3>
 <p>{{ book.detail }}</p>
-<h4>{{ book.status }})</h4>
+<h4>({{ book.status }})</h4>
 <h4>{{ book.date_added }}</h4>
 <h4>{{ book.last_borrowed }}</h4>
 </div>
