lab completed today

--- a/django_lender/templates/django_registration/activation_complete.html
+++ b/django_lender/templates/django_registration/activation_complete.html
@@ -1,2 +1,7 @@
 {%  extends 'generic/base.html' %}
 
+ {% block content %}
+<div class="activation-complete container">
+    <h2>Activation complete. You may now login.</h2>
+</div>
+{% endblock content %}
