--- a/django_lender/templates/django_registration/registration_complete.html
+++ b/django_lender/templates/django_registration/registration_complete.html
@@ -1,6 +1,9 @@
 {%  extends 'generic/base.html' %}
 
 {%  block content %}
-<div class="registration-complete"></div>
+<div class="registration-complete container">
+    <h2>Registration complete</h2>
+    <h3>Check your email for the account activation link</h3>
+</div>
 {% endblock content %}
 
