--- a/django_lender/templates/django_registration/registration_form.html
+++ b/django_lender/templates/django_registration/registration_form.html
@@ -1,2 +1,12 @@
 {% extends 'generic/base.html' %}
 
+ {%  block content %}
+<div class="registration-form container">
+    <h2>Register for an account</h2>
+    <form method="post">
+        {%  csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Register"/>
+    </form>
+</div>
+{%  endblock content %}
