--- a/lender_books/templates/books/book_detail.html
+++ b/lender_books/templates/books/book_detail.html
@@ -5,7 +5,7 @@
 {% load staticfiles %}
 <div class="book_detail">
     {% load staticfiles %}
-    <h2>Book Title: {{ book.title }}</h2>
+    <h2>{{ book.title }}</h2>
 <img src="{{book.cover_image.url}}" height="300">
     <h3>{{ book.year}}</h3>
     <h3>Author: {{ book.author }}</h3>
