--- a/lender_books/templates/books/book_list.html
+++ b/lender_books/templates/books/book_list.html
@@ -2,9 +2,10 @@
 
 {% block title %}List{% endblock title %}
 {% block content %}
-<div class="book_list">
-{% for book in books %}
-<h3><a href="{% url "book_detail" pk=book.id %}">{{ book.title }} ({{ book.status }})</a></h3>
-{% endfor %}
-</div>
+<p>Below are the books in your library.</p>
+	<ul>
+	{% for book in books %}
+	    <li><a href="{% url 'book_detail' pk=book.id %}">{{ book.title }}</a> ({{ book.status }})</li>
+	{% endfor %}
+	</ul>
 {% endblock content %}
