--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,17 +1,53 @@
-/* body, html */
+* {
+    transition: .1s ease;
+}
 
-	body {
-	    font-family: sans-serif;
-	    font-size: 18px;
-	}
+body {
+    background-color: ghostwhite;
+}
 
+body, input, button {
+    font-family: sans-serif;
+    font-size: 18px;
+}
 
-	/* text */
+#container {
+    margin: 0 auto;
+    max-width: 960px;
+}
 
-	h1 {
-	    font-size: 1.5em;
-	}
+@media (max-width: 980px) {
+    #container {
+        margin: 0 1em;
+    }
+}
 
-	p {
-	    margin-bottom: 1em;
-	}
+main {
+    padding: 1em;
+}
+
+h1 {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+p {
+    margin-bottom: 1em;
+}
+
+a,
+a:hover,
+a:active {
+    border-bottom: 3px solid red;
+    color: #447e9b;
+    text-decoration: none;
+}
+
+a:hover {
+    border-bottom: 3px solid #447e9b;
+}
